@@ -1777,8 +1777,10 @@ namespace libtorrent
 		{
 			t->get_policy().update_peer_port(listen_port
 				, peer_info_struct(), peer_info::incoming);
+			received_listen_port();
 			if (is_disconnecting()) return;
 		}
+
 		// there should be a version too
 		// but where do we put that info?
 
