@@ -170,6 +170,7 @@ namespace libtorrent
 		, m_choke_rejects(0)
 		, m_fast_reconnect(false)
 		, m_active(outgoing)
+		, m_received_listen_port(false)
 		, m_peer_interested(false)
 		, m_peer_choked(true)
 		, m_interesting(false)
@@ -320,6 +321,7 @@ namespace libtorrent
 		, m_choke_rejects(0)
 		, m_fast_reconnect(false)
 		, m_active(outgoing)
+		, m_received_listen_port(false)
 		, m_peer_interested(false)
 		, m_peer_choked(true)
 		, m_interesting(false)
